--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'United States -- Economic conditions -- 1918-1945'
 - !lcsh 'United States -- History'
 - !lcc 'HC'
+- GITenberg
 title: The American Empire
 url: http://www.gutenberg.org/ebooks/27787
